<resources>
    <string name="app_name">Delivery Service</string>
    <string name="alert_dialogTitle">Caution!</string>
    <string name="alert_dialogMessage">You are not near the package</string>
    <string name="alert_dialogUeberspringen">Skip</string>
    <string name="alert_dialogAbbrechen">Cancel</string>
    <string name="settingTitle">Settings</string>
    <string name="settingDarkmode">Darkmode</string>
    <string name="settingMap">Map</string>
    <string name="settingOnOff">OFF/ON</string>
    <string name="settingSound">Sound</string>
    <string name="settingSoundEffects">SoundEffects OFF/ON</string>
    <string name="settingMusic">Music OFF/ON</string>
    <string-array name="settingMapBack">
        <item>Standard</item>
        <item>Dark</item>
        <item>Retro</item>
        <item>Fancy</item>
    </string-array>
    <string name="shopImage">Image</string>
    <string name="shopTitle">Shop</string>
    <string name="menuTitle">Menu</string>
    <string name="menuInventar">Inventory</string>
    <string name="menuSpielanleitung">How to play</string>
    <string name="menuSettings">Settings</string>
    <string name="menuShop">Shop</string>
    <string name="back">Back</string>
    <string name="inventoryTokens">Tokens:</string>
    <string name="impressumTitleUnder" translatable="false"><u>Impressum</u></string>
    <string name="impressumTitle">Impressum</string>
    <string name="impressumKontakt">Contact:</string>
    <string name="impressumUrheber">Icons Creator:</string>
    <string name="urheber">Icons created by <a href="https://www.flaticon.com/de/autoren/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></string>
    <string name="urheber1">Icons created by <a href="https://www.flaticon.com/de/kostenloses-icon/briefkasten_2343756" title="srip">srip</a> from <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></string>
    <string name="shopMail">Stamp: \nIncreases range</string>
    <string name="shopZoll">Customs duties: \nDouble income</string>
    <string name="shopPakete">Packages: \n10 additional packages </string>
    <string name="shopZeit">Delay: \nTemporarily increases time</string>
    <string name="shopKeineMünzen">You do not have enough coins at the moment</string>
    <string name="shopBuy">purchase done</string>l
    <string name="adid" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="zeitVerbleib">Time remaining: </string>
    <string name="noTimer">There is no running timer at the moment</string>
    <string name="timePassed">Time is over, you won't get any tokens</string>
    <string name="spielAnleitung">The goal of the game is to deliver a package to a mailbox. For this, however, a package must first be obtained. Depending on the type of package, there are different levels of difficulty, so more packages. Various PowerUps can be bought in the shop, which can help you in the game. In the inventory you can see the current token number and packages. </string>
</resources>
